deploy/k8s/employee-deployment.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: employee-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
        - name: employee
          image: "codingkapoor/employee-impl:latest"
          imagePullPolicy: Never
          ports:
            - name: management
              containerPort: 8558
          readinessProbe:
            httpGet:
              path: "/ready"
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
          livenessProbe:
            httpGet:
              path: "/alive"
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
