deploy/k8s/holiday-deployment.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: holiday-deployment
  namespace: intimations
spec:
  replicas: 1
  selector:
    matchLabels:
      component: holiday
  template:
    metadata:
      labels:
        component: holiday
    spec:
      containers:
        - name: holiday
          image: "codingkapoor/holiday-impl:latest"
          imagePullPolicy: Never
          ports:
            - name: management
              containerPort: 8558
          readinessProbe:
            httpGet:
              path: "/ready"
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
          livenessProbe:
            httpGet:
              path: "/alive"
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
