deploy/k8s/notifier-deployment.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: notifier-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier
  template:
    metadata:
      labels:
        app: notifier
    spec:
      containers:
        - name: notifier
          image: "codingkapoor/notifier-impl:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: management
              containerPort: 8558
          readinessProbe:
            httpGet:
              path: "/ready"
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
          livenessProbe:
            httpGet:
              path: "/alive"
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
