deploy/k8s/passwordless-deployment.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: passwordless-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passwordless
  template:
    metadata:
      labels:
        app: passwordless
    spec:
      containers:
        - name: passwordless
          image: "codingkapoor/passwordless-impl:latest"
          imagePullPolicy: Never
          ports:
            - name: management
              containerPort: 8558
          readinessProbe:
            httpGet:
              path: "/ready"
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
          livenessProbe:
            httpGet:
              path: "/alive"
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
