deploy/k8s/cassandra-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: cassandra-endpoints
  namespace: intimations
subsets:
  - addresses:
      - ip: 10.0.2.2
    ports:
      - name: "cql"
        port: 9042
