deploy/k8s/holiday-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: holiday-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: holiday
  ports:
    - name: http
      port: 80
      targetPort: 53358
