deploy/k8s/kafka-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  type: ClusterIP
  ports:
    - name: "broker"
      protocol: "TCP"
      port: 9092
      targetPort:  9092
      nodePort: 0
