deploy/k8s/kafka-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kafka-endpoints
subsets:
  - addresses:
      - ip: 10.0.2.2
    ports:
      - name: "broker"
        port: 9092
