deploy/k8s/mysql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    - name: "cql"
      protocol: "TCP"
      port: 9042
      targetPort: 9042
      nodePort: 0
