deploy/k8s/mysql-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-endpoints
subsets:
  - addresses:
      - ip: 10.0.2.2
    ports:
      - name: "mysql"
        port: 3306
