deploy/k8s/notifier-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifier-cluster-ip-service
  namespace: intimations
spec:
  type: ClusterIP
  selector:
    app: notifier
  ports:
    - name: http
      port: 80
      targetPort: 49785
