deploy/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  namespace: intimations
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /api/employees
            backend:
              serviceName: employee-cluster-ip-service
              servicePort: 80
          - path: /api/passwordless
            backend:
              serviceName: passwordless-cluster-ip-service
              servicePort: 80
          - path: /api/holidays
            backend:
              serviceName: holiday-cluster-ip-service
              servicePort: 80
